# alarm_system

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults  voltage_types.h
.cache/clangd/index/: alarm_system.c.24B8B2D0A1BA732A.idx
components/audio/: CMakeLists.txt  audio.c  audio.h
components/voltage/: CMakeLists.txt  voltage.c  voltage.h  voltage_types.h
components/wifi_controller/: CMakeLists.txt  connect.c  connect.h  wifi_controller.c  wifi_controller.h
main/: CMakeLists.txt  Kconfig.projbuild  alarm_system.c  audio.c  audio.h  main.c  storage.c  storage.h
main/ulp_controller/: ulp_controller.S  ulp_controller.c  ulp_controller.h
